--- a/AtkTennis/Views/Admin/CourtSettings.cshtml
+++ b/AtkTennis/Views/Admin/CourtSettings.cshtml
@@ -71,7 +71,7 @@
                                             <td>@item.CourtConditions</td>
                                             <td>@item.CourtWebConditions</td>
 
-                                            <td><button class="btn btn-warning">Güncelle</button></td>
+                                            <td><button class="btn btn-warning" id="@item.CourtId" onclick="openUpdateCourtModel(this.id)">Güncelle</button></td>
                                             <td><button class="btn btn-danger">Sil</button></td>
 
                                         </tr>
@@ -130,8 +130,6 @@
                         <!-- /.card-body -->
                     </div>
                     <!-- /.card -->
-
-
                     <!-- /.card -->
                     <div class="card">
                         <div class="card-header">
@@ -236,10 +234,185 @@
     <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
+<!-- Modal -->
+<div class="modal fade" id="updateCourtModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
 
+<!-- Modal -->
+<div class="modal fade" id="updateCourtModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-body">
+                    <div class="roww roww-space">
+
+                        <div class="coll-2">
+                            <div class="input--group">
+                                <label class="label">Adı</label>
+                                <input type="text" id="name" class="input--style-4">
+                            </div>
+                        </div>
+                        <div class="coll-2">
+                            <div class="input--group">
+                                <label class="label">Türü</label>
+                                <input type="text" id="type" class="input--style-4">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="roww roww-space">
+                        <div class="coll-2">
+                            <div class="input--group">
+                                <label class="label">Durumu</label>
+                                <input type="text" id="condition" class="input--style-4">
+                            </div>
+                        </div>
+                        <div class="coll-2">
+                            <div class="input--group">
+                                <label class="label">Web Durumu</label>
+                                <input type="text" id="webcondition" class="input--style-4">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer" id="updateModel">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="updateCourtInf(this.id)">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<script>
+    function openUpdateCourtModel(ID) {
+
+        $.ajax({
+            type: "GET",
+            url: '../Admin/GetCourtInf',
+            cache: false,
+            data: { "id": ID },
+            dataType: "json",
+            async: true,
+            success: function (res) {
+
+
+
+                if (res != null) {
+
+                    
+
+                    $("#name").val(res.courtName);
+                    $("#type").val(res.courtType);
+                    $("#condition").val(res.courtConditions);
+                    $("#webcondition").val(res.courtWebConditions);
+
+                    $("#updateModel button:nth-of-type(2)").attr("id", ID);
+
+                    $('#updateCourtModalLong').modal('toggle');
+                }
+
+                else {
+                    $.confirm({
+                        title: "Uyarı",
+                        content: "Kullanıcı Bulunamadı.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+                }
+
+            },
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
+    }
+</script>
+
+<script>
+    function updateCourtInf(id) {
+
+        $.ajax({
+            type: "POST",
+            url: '../Admin/UpdateCourtInf',
+            cache: false,
+            data: { "id": id, "courtName": $("#name").val(), "courtType": $("#type").val(), "courtConditions": $("#condition").val(), "courtWebConditions": $("#webcondition").val() },
+            dataType: "json",
+            async: true,
+            success: function (res) {
+
+             
+
+                if (res !=null) {
+
+                    $.confirm({
+                        title: "Bilgilendirme",
+                        content: "Kullanıcı başarıyla güncellendi.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+
+                    window.location.href="CourtSettings"
+                  
+                }
+
+                else {
+                    $.confirm({
+                        title: "Uyarı",
+                        content: "Kullanıcı Bulunamadı.",
+                        buttons: {
+                            TAMAM: function () {
+
+                            }
+                        }
+                    });
+                }
+
+            },
+            error: function (textStatus, errorThrown) {
+                console.log(JSON.stringify(textStatus));
+                console.log(textStatus);
+            }
+        });
+
+
+    }
+</script>
 
 
 
@@ -260,7 +433,7 @@
             "responsive": true,
         });
 
-   
+
     });
 </script>
 
